[refs #91504] Fixing expand/collapse button styling

--- a/eea/geotags/skins/eea_geotags/eea.geotags.css
+++ b/eea/geotags/skins/eea_geotags/eea.geotags.css
@@ -53,44 +53,6 @@
   height: 100%;
 }
 
-.geo-splitter .vsplitbar {
-  width: 5px;
-  background-color: #ffffff;
-}
-
-.geo-splitter .vsplitbar a {
-  text-decoration: none;
-  color: #8CACBB;
-  font-size: 18px;
-  border: 1px solid #8CACBB;
-  background-color: #ffffff;
-  opacity: 0.5;
-  filter: alpha(opacity = 50);
-}
-
-.geo-splitter .vsplitbar a:hover {
-  opacity: 1;
-  filter: alpha(opacity = 100);
-}
-
-.geo-splitter .vsplitbar a {
-  float: right;
-  margin-left: 0;
-  margin-right: 4px;
-  padding: 5px 5px 10px 5px;
-  border-style: none none solid solid;
-  -moz-border-radius-bottomleft:5px;
-  -webkit-border-bottom-left-radius:5px;
-}
-
-.geo-leftside .vsplitbar a {
-  float: left;
-  margin-left: 4px;
-  border-style: none solid solid none;
-  -moz-border-radius-bottomright:5px;
-  -webkit-border-bottom-right-radius:5px;
-}
-
 .geo-left {
   z-index: 1020 !important;
 }
@@ -392,12 +354,13 @@
 }
 
 /* split */
-split {
+.split {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow-y: auto;
   overflow-x: hidden;
+  position: relative;
 }
 .content {
   border: 1px solid #C0C0C0;
@@ -421,4 +384,38 @@ split {
 .split.split-horizontal, .gutter.gutter-horizontal {
   height: 100%;
   float: left;
+}
+
+/* split buttons */
+.split-button {
+  position: absolute;
+  z-index: 100;
+  text-decoration: none;
+  color: #8CACBB;
+  font-size: 18px;
+  border: 1px solid #8CACBB;
+  background-color: #ffffff;
+  opacity: 0.5;
+  filter: alpha(opacity = 50);
+  text-decoration: none;
+  padding: 5px 5px 10px 5px;
+}
+
+.split-button:hover {
+  opacity: 1;
+  filter: alpha(opacity = 100);
+  text-decoration: none;
+}
+
+.split-button-left {
+  margin-left: 6px;
+  border-style: none solid solid none;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+}
+.split-button-right {
+  margin-left: -27px;
+  border-style: none none solid solid;
+  -moz-border-radius-bottomleft: 5px;
+  -webkit-border-bottom-left-radius: 5px;
 }
